Skill bage update

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <h1 class="name">Jawad Asif</h1>
                         <div class="title-wrapper">
                             <h2 class="position">Artificial Intelligence Engineer</h2>
-                            <p class="description">My neural networks are like my coffee - deep and complex, with occasional unexpected outputs ☕</p>
+                            <p class="description">From GPUs to workflows, I keep things running cool, optimizing models, pipelines, and deployments with speed and precision. 🔥 </p>
                         </div>
                     </div>
                     <div class="social-links">
@@ -259,60 +259,67 @@ perform training to choose right devices and updating global model and tested on
             <!-- PIxemantic -->
             <div class="experience-item fade-in">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h4 class="mb-1">Machine Learning Intern</h4>
+                    <h4 class="mb-1">Tutor Co-ordinator</h4>
                 </div>
-                <h5 class="text-primary mb-2">PIxemantic</h5>
+                <h5 class="text-primary mb-2">University of Padova</h5>
                 <p class="text-muted mb-2">
-                    <i class="fas fa-calendar-alt me-2"></i>June 2022 - September 2022
-                    <i class="fas fa-map-marker-alt ms-3 me-2"></i>Tunis, Tunisia
+                    <i class="fas fa-calendar-alt me-2"></i>September 2022 - September 2023
+                    <i class="fas fa-map-marker-alt ms-3 me-2"></i>Padova, Italy
                 </p>
                 <ul class="list-unstyled">
                     <li class="mb-2">
                         <i class="fas fa-check-circle text-primary me-2"></i>
-                        Developed an automated system for data extraction from financial statements using OCR technology
+Led and guided tutors in the execution of an international tutoring program, ensuring high-quality delivery and
+support for students.
                     </li>
                     <li class="mb-2">
                         <i class="fas fa-check-circle text-primary me-2"></i>
-                        Improved data accuracy on balance sheets, reducing manual entry errors
+Coordinated schedules, resources, and activities to optimize efficiency and enhance the impact of tutoring
+initiatives.
                     </li>
                     <li class="mb-2">
                         <i class="fas fa-check-circle text-primary me-2"></i>
-                        Significantly decreased processing time for balance sheets by 90%
+Adapted tutoring approaches to address diverse student needs and cultural backgrounds, fostering inclusivity
+and effective learning outcomes.
                     </li>
                 </ul>
                 <div class="mt-3">
-                    <span class="skill-badge">OCR</span>
-                    <span class="skill-badge">Process Automation</span>
-                    <span class="skill-badge">Data Extraction</span>
-                    <span class="skill-badge">Financial Data</span>
+                    <span class="skill-badge">Organizing Tutors</span>
+
                 </div>
             </div>
 
             <!-- eDonec -->
             <div class="experience-item fade-in">
                 <div class="d-flex justify-content-between align-items-center">
-                    <h4 class="mb-1">Web Development Intern</h4>
+                    <h4 class="mb-1">Web Developer</h4>
                 </div>
-                <h5 class="text-primary mb-2">eDonec</h5>
+                <h5 class="text-primary mb-2">Ministry of IT and Telecom - Netsol</h5>
                 <p class="text-muted mb-2">
-                    <i class="fas fa-calendar-alt me-2"></i>July 2021 - August 2021
-                    <i class="fas fa-map-marker-alt ms-3 me-2"></i>Tunis, Tunisia
+                    <i class="fas fa-calendar-alt me-2"></i>July 2017 - May 2020
+                    <i class="fas fa-map-marker-alt ms-3 me-2"></i>Islamabad, Pakistan
                 </p>
                 <ul class="list-unstyled">
                     <li class="mb-2">
                         <i class="fas fa-check-circle text-primary me-2"></i>
-                        Collaborated with a team of 6 to develop an eCommerce website for eDonec
+Responsible for conceptualizing and creating back-end and database designs for web applications.
                     </li>
                     <li class="mb-2">
                         <i class="fas fa-check-circle text-primary me-2"></i>
-                        Ensured code quality through rigorous testing and debugging for 100% compatibility across all devices and browsers
+Participated in Agile and Scrum practices, including sprint planning, daily stand-ups, and retrospective
+meetings to ensure timely and efficient project delivery.                    
+                    </li>
+                    <li class="mb-2">
+                        <i class="fas fa-check-circle text-primary me-2"></i>
+                    Held the role of UI Designer and Developer, tasked with conceptualizing and crafting back-end and database
+design for web.
                     </li>
                 </ul>
                 <div class="mt-3">
                     <span class="skill-badge">Web Development</span>
                     <span class="skill-badge">eCommerce</span>
-                    <span class="skill-badge">Quality Assurance</span>
-                    <span class="skill-badge">Cross-platform Testing</span>
+                    <span class="skill-badge">HTML</span>
+                    <span class="skill-badge">SQL</span>
                 </div>
             </div>
         </div>
@@ -369,69 +376,31 @@ perform training to choose right devices and updating global model and tested on
                 <div class="timeline-content fade-in">
                     <div class="timeline-header">
                         <span class="degree-status completed">Completed</span>
-                        <h4>Erasmus+ Student Mobility</h4>
-                        <h5>Exchange Program</h5>
+                        <h4>Bachelor of Science</h4>
+                        <h5>Bachelor of Science in Information Technology</h5>
                     </div>
                     <div class="timeline-body">
                         <div class="university-info">
                             <i class="fas fa-university"></i>
-                            <span>Università degli studi di padova (UNIPD)</span>
+                            <span>The University of Azad Jammu and Kashmir Muzaffarabad</span>
                         </div>
                         <div class="duration">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>09/2022 - 07/2023</span>
+                            <span>09/2012 - 09/2017</span>
                         </div>
                         <div class="location">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Padova, Italy</span>
+                            <span>Kotli Azad Kashmir, Pakistan</span>
                         </div>
                         <div class="coursework">
                             <h6>Principal Coursework:</h6>
                             <div class="course-tags">
-                                <span class="course-tag">Machine Learning</span>
-                                <span class="course-tag">Neural Networks</span>
-                                <span class="course-tag">Deep Learning</span>
-                                <span class="course-tag">Reinforcement Learning</span>
-                                <span class="course-tag">Human Data Analytics</span>
-                                <span class="course-tag">Scientific Computing</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="timeline-dot"></div>
-            </div>
-
-            <!-- ICT Engineer's Degree -->
-            <div class="timeline-item">
-                <div class="timeline-content fade-in">
-                    <div class="timeline-header">
-                        <span class="degree-status completed">Completed</span>
-                        <h4>ICT Engineer's Degree</h4>
-                        <h5>Engineering</h5>
-                    </div>
-                    <div class="timeline-body">
-                        <div class="university-info">
-                            <i class="fas fa-university"></i>
-                            <span>Higher School of Communications of Tunis (SUP'COM)</span>
-                        </div>
-                        <div class="duration">
-                            <i class="fas fa-calendar-alt"></i>
-                            <span>09/2020 - 07/2023</span>
-                        </div>
-                        <div class="location">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>Ariana, Tunisia</span>
-                        </div>
-                        <div class="coursework">
-                            <h6>Principal Coursework:</h6>
-                            <div class="course-tags">
-                                <span class="course-tag">Probability</span>
-                                <span class="course-tag">Statistical Inference</span>
-                                <span class="course-tag">Optimization</span>
-                                <span class="course-tag">Cloud</span>
-                                <span class="course-tag">Big Data</span>
-                                <span class="course-tag">Data Science</span>
-                                <span class="course-tag">Artificial Intelligence</span>
+                                <span class="course-tag">Calculus and Analytical Geometry</span>
+                                <span class="course-tag">Database Management</span>
+                                <span class="course-tag">Information System</span>
+                                <span class="course-tag">Advance OOP</span>
+                                <span class="course-tag">Distributed database system</span>
+                                <span class="course-tag">Discrete structures</span>
                             </div>
                         </div>
                     </div>
@@ -450,15 +419,15 @@ perform training to choose right devices and updating global model and tested on
                     <div class="timeline-body">
                         <div class="university-info">
                             <i class="fas fa-university"></i>
-                            <span>Preparatory Institute For Engineering Studies of Nabeul (IPEIN)</span>
+                            <span>Federal Government Inter College Kotli AJK</span>
                         </div>
                         <div class="duration">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>09/2018 - 07/2020</span>
+                            <span>10/2010 - 09/2012</span>
                         </div>
                         <div class="location">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Nabeul, Tunisia</span>
+                            <span>Kotli AJK, Pakistan</span>
                         </div>
                     </div>
                 </div>
@@ -552,7 +521,7 @@ perform training to choose right devices and updating global model and tested on
                             Python, JavaScript
                         </div>
                         <div class="proficiency-level familiar">
-                            C/C++, SQL
+                            SQL, HTML/CSS, 
                         </div>
                         <div class="skill-tags mt-3">
                             <span class="skill-tag">Git</span>
@@ -742,7 +711,7 @@ perform training to choose right devices and updating global model and tested on
         <h2 class="section-title">Awards & Achievements</h2>
 
         <div class="row g-4">
-            <!-- AirQo Challenge -->
+            <!-- Gold Medal -->
             <div class="col-lg-4 col-md-6">
                 <div class="award-card">
                     <div class="award-ribbon">
@@ -767,33 +736,7 @@ perform training to choose right devices and updating global model and tested on
                 </div>
             </div>
 
- 
-            <!-- GeoAI Hack 
-            <div class="col-lg-4 col-md-6">
-                <div class="award-card">
-                    <div class="award-ribbon">
-                        <span>9th Place</span>
-                    </div>
-                    <div class="award-content">
-                        <div class="award-icon">
-                            <i class="fas fa-satellite"></i>
-                        </div>
-                        <h3>GeoAI Hack 2022 - Crop Classification</h3>
-                        <p class="award-details">
-                            <i class="fas fa-trophy"></i> Ranked 9/77
-                            <br>
-                            <i class="fas fa-calendar"></i> April 2022
-                        </p>
-                        <p class="award-org">Zindi Africa</p>
-                        <div class="award-tags mt-3">
-                            <span class="skill-badge">Satellite Imagery</span>
-                            <span class="skill-badge">Agriculture</span>
-                            <span class="skill-badge">Time Series</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            -->
+            <!-- Placeholder for additional awards -->
         </div>
     </div>
 </section>
